Simplify api dto models
