# api/src/WeightTracker.Api/Endpoints/Weights/Get/WeightsGetResponse.cs
@@ -1,13 +1,8 @@
-﻿namespace WeightTracker.Api.Endpoints.Weights.Get;
+namespace WeightTracker.Api.Endpoints.Weights.Get;
 
 internal sealed class WeightsGetResponse
 {
-    public StatsResponse Stats { get; init; } = null!;
+    public WeightStats Stats { get; init; } = null!;
 
     public IEnumerable<WeightsEntryResponse> Data { get; init; } = [];
 }
-
-internal sealed record StatsResponse(
-    decimal AverageWeightKg,
-    decimal MaximumWeightKg,
-    decimal MinimumWeightKg);
